// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Masquerade Should render form as expected 1`] = `
<StandardPage>
  <StandardCard
    help={
      Object {
        "buttonLabel": "CLOSE",
        "text": <p>
          Masquerade as another user...
        </p>,
        "title": "Masquerade",
      }
    }
    title="Masquerade"
  >
    <WithStyles(ForwardRef(Typography))>
      <p>
        <strong>
          WARNING!!
        </strong>
         When masquerading as a user, you will effectively become that user, and changes you make will apply to the account!
      </p>
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Grid))
      alignItems="flex-end"
      container={true}
      spacing={3}
      style={
        Object {
          "marginTop": 12,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(TextField))
          fullWidth={true}
          id="userName"
          label="Enter a UQ staff or student username (eg. uqjsmith1 or s123456)"
          onChange={[Function]}
          onKeyPress={[Function]}
          value=""
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          color="primary"
          disabled={false}
          fullWidth={true}
          id="submitMasquerade"
          onClick={[Function]}
          variant="contained"
        >
          Masquerade
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </StandardCard>
</StandardPage>
`;

exports[`Component Masquerade Should render readonly description 1`] = `
<StandardPage>
  <StandardCard
    help={
      Object {
        "buttonLabel": "CLOSE",
        "text": <p>
          Masquerade as another user...
        </p>,
        "title": "Masquerade",
      }
    }
    title="Masquerade"
  >
    <WithStyles(ForwardRef(Typography))>
      <p>
        <strong>
          NOTE:
        </strong>
         As a read-only masquerader, you can view all parts of the profile, but you are not able to make any changes to the account.
      </p>
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Grid))
      alignItems="flex-end"
      container={true}
      spacing={3}
      style={
        Object {
          "marginTop": 12,
        }
      }
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(TextField))
          fullWidth={true}
          id="userName"
          label="Enter a UQ staff or student username (eg. uqjsmith1 or s123456)"
          onChange={[Function]}
          onKeyPress={[Function]}
          value=""
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(ForwardRef(Button))
          color="primary"
          disabled={false}
          fullWidth={true}
          id="submitMasquerade"
          onClick={[Function]}
          variant="contained"
        >
          Masquerade
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </StandardCard>
</StandardPage>
`;
